syntax = "proto3";

package ai.metathings.service.core;

enum EntityState {
	ENTITY_STATE_UNKNOWN = 0;
	ENTITY_STATE_ONLINE = 1;
	ENTITY_STATE_OFFLINE = 2;
}

message Entity {
	string id = 1;
	string core_id = 2;
	string name = 3;
	string service_name = 4;
	string plugin = 5;
	EntityState state = 6;
}
