syntax = "proto3";

package ai.metathings.service.core;

import "google/protobuf/wrappers.proto";
import "google/protobuf/any.proto";

message UnaryCallRequestPayload {
	google.protobuf.StringValue service_name = 1;
	google.protobuf.StringValue method_name = 2;
	google.protobuf.Any payload = 3;
}

message UnaryCallResponsePayload {
	string service_name = 1;
	string method_name = 2;
	google.protobuf.Any payload = 3;
}
